--- a/index.html
+++ b/index.html
@@ -338,11 +338,45 @@
 
         <!-- popular brands section ends  -->
 
+
+        <section
+            class="container subscribe d-flex flex-column flex-md-row justify-content-md-around bg-top-section align-items-center text-white py-3 mb-5 rounded-3"
+            id="subscribe">
+
+            <div>
+                <h1 class="text-center">LET'S KEEP IN TOUCH</h1>
+                <p class="text-center">Get updates on sales & provide your valuable feedback</p>
+            </div>
+
+
+            <div>
+                <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label">Your Email</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput1"
+                        placeholder="name@example.com">
+                </div>
+                <div class="mb-3">
+                    <label for="exampleFormControlTextarea1" class="form-label">Your Feedback</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+
+
+                <div class="d-grid gap-2">
+                    <button class="btn-buy-now" type="button">Submit</button>
+
+                </div>
+            </div>
+
+        </section>
+
     </main>
 
 
     <footer>
-
+        <p class="text-center text-white bg-top-section mb-0 py-2"><small>©2021. Honda CBR. All rights reserved.
+                Dhaka,
+                Bangladesh.</small>
+        </p>
     </footer>
     <!-- bootstrap js  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
