top-section modified

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                     </div>
                     <div class="col"><img src="images/Brands/tvs.png" class="img-fluid mw-100" height="50%" alt="">
                     </div>
-                    <div class="col"><img src="images/Brands/hero.jpg" class="img-fluid mw-100" height="50%" alt="">
+                    <div class="col"><img src="images/Brands/hero5.jpg" class="img-fluid mw-100" height="50%" alt="">
                     </div>
                     <div class="col"><img src="images/Brands/yamaha.png" class="img-fluid mw-100" height="50%" alt="">
                     </div>
