--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     </div>
 
                     <div
-                        class="col-8 col-sm-5 col-md-6 pt-5 d-flex justify-content-center align-items-center align-self-center mx-5 mx-md-0">
+                        class="col-8 col-sm-6 col-md-6 pt-5 d-flex justify-content-center align-items-center align-self-center mx-5 mx-md-0">
                         <img class="img-fluid mw-100" src="images/header-bike.png" alt="">
                     </div>
                 </div>
@@ -158,8 +158,8 @@
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 mt-1">
                 <div class="col">
                     <div class="card h-100 card-border">
-                        <img src="images/user-1.png" class="card-img-top shoe-img img-border" width="149px"
-                            height="149px" alt="...">
+                        <img src="images/user-1.png" class="card-img-top  img-border" width="149px" height="149px"
+                            alt="...">
                         <div class="card-body text-center">
 
                             <p class="card-text mb-0 all-section-medium-text" style="color:#6C6C6C; font-weight: 400;">
@@ -179,8 +179,8 @@
                 </div>
                 <div class="col">
                     <div class="card h-100 card-border">
-                        <img src="images/user-2.png" class="card-img-top shoe-img img-border" width="149px"
-                            height="149px" alt="...">
+                        <img src="images/user-2.png" class="card-img-top  img-border" width="149px" height="149px"
+                            alt="...">
                         <div class="card-body text-center">
 
                             <p class="card-text mb-0 all-section-medium-text" style="color:#6C6C6C; font-weight: 400;">
@@ -200,8 +200,8 @@
                 </div>
                 <div class="col">
                     <div class="card h-100 card-border">
-                        <img src="images/user-3.png" class="card-img-top shoe-img img-border" width="149px"
-                            height="149px" alt="...">
+                        <img src="images/user-3.png" class="card-img-top  img-border" width="149px" height="149px"
+                            alt="...">
                         <div class="card-body text-center">
 
                             <p class="card-text mb-0 all-section-medium-text" style="color:#6C6C6C; font-weight: 400;">
@@ -361,15 +361,20 @@
             </h2>
             <div>
                 <div class="row row-cols-1  row-cols-md-2 row-cols-lg-3 justify-content-sm-center g-5 mx-4">
-                    <div class="col"><img src="images/Brands/honda.png" class="img-fluid mw-100" height="50%" alt="">
+                    <div class="col d-flex justify-content-center align-items-center">
+                        <img src="images/Brands/honda.png" class="img-fluid brand-img mw-100" height="50%" alt="">
                     </div>
-                    <div class="col"><img src="images/Brands/suzuki2.png" class="img-fluid mw-100" height="50%" alt="">
+                    <div class="col d-flex justify-content-center align-items-center">
+                        <img src="images/Brands/suzuki2.png" class="img-fluid brand-img mw-100" height="50%" alt="">
                     </div>
-                    <div class="col"><img src="images/Brands/tvs.png" class="img-fluid mw-100" height="50%" alt="">
+                    <div class="col d-flex justify-content-center align-items-center">
+                        <img src="images/Brands/tvs.png" class="img-fluid brand-img mw-100" height="50%" alt="">
                     </div>
-                    <div class="col"><img src="images/Brands/hero5.jpg" class="img-fluid mw-100" height="50%" alt="">
+                    <div class="col d-flex justify-content-center align-items-center">
+                        <img src="images/Brands/hero5.jpg" class="img-fluid brand-img mw-100" height="50%" alt="">
                     </div>
-                    <div class="col"><img src="images/Brands/yamaha.png" class="img-fluid mw-100" height="50%" alt="">
+                    <div class="col d-flex justify-content-center align-items-center">
+                        <img src="images/Brands/yamaha.png" class="img-fluid brand-img mw-100" height="50%" alt="">
                     </div>
 
                 </div>
