client section modified

--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
                         <div class="card-body text-center">
 
                             <p class="card-text mb-0 all-section-medium-text" style="color:#6C6C6C; font-weight: 400;">
-                                Slate helps you see how <br>
-                                many more days you need <br>
-                                to work to reach your financial <br>
-                                goal for the month and year.</p>
+                                Excellent Service! I've <br>
+                                ordered a bike and get <br>
+                                delivered within only 2 days. <br>
+                                I'm so satisfied.</p>
                             <img src="images/ratings-removebg-preview.png" class="img-fluid" width="130px" height="22px"
                                 alt="">
                             <p class="text-primary all-section-small-text" style="font-weight: 600;">Regina Miles</p>
@@ -184,15 +184,15 @@
                         <div class="card-body text-center">
 
                             <p class="card-text mb-0 all-section-medium-text" style="color:#6C6C6C; font-weight: 400;">
-                                Slate helps you see how <br>
-                                many more days you need <br>
-                                to work to reach your financial <br>
-                                goal for the month and year.</p>
+                                Their service is really good! <br>
+                                I purchased a bike & got <br>
+                                delivered on time. Everything <br>
+                                is perfectly fine.</p>
                             <img src="images/ratings-removebg-preview.png" class="img-fluid" width="130px" height="22px"
                                 alt="">
-                            <p class="text-primary all-section-small-text" style="font-weight: 600;">Regina Miles</p>
+                            <p class="text-primary all-section-small-text" style="font-weight: 600;">Jiniya Watson</p>
                             <p style="color:#252B42; font-weight: 600;
-                                " class="all-section-small-text">Banker</p>
+                                " class="all-section-small-text">Teacher</p>
 
                         </div>
 
@@ -205,15 +205,15 @@
                         <div class="card-body text-center">
 
                             <p class="card-text mb-0 all-section-medium-text" style="color:#6C6C6C; font-weight: 400;">
-                                Slate helps you see how <br>
-                                many more days you need <br>
-                                to work to reach your financial <br>
-                                goal for the month and year.</p>
+                                Quite good! Delivery time and <br>
+                                product quality is ok but<br>
+                                customer care should be better. <br>
+                                That's all.</p>
                             <img src="images/ratings-removebg-preview.png" class="img-fluid" width="130px" height="22px"
                                 alt="">
-                            <p class="text-primary all-section-small-text" style="font-weight: 600;">Regina Miles</p>
+                            <p class="text-primary all-section-small-text" style="font-weight: 600;">Angela Gomes</p>
                             <p style="color:#252B42; font-weight: 600;
-                                " class="all-section-small-text">Banker</p>
+                                " class="all-section-small-text">Singer</p>
 
                         </div>
 
